# msg-to-eml-open-converter

./: .gitignore  CONTRIBUTING.md  PLAN.md  README.md  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
src/msg2eml/: __init__.py  attachments.py  calendar_convert.py  cli.py  contact_convert.py  convert.py  exceptions.py  headers.py  logging_utils.py  msgclass.py  report.py  rtf.py  task_convert.py  walker.py
src/msg2eml/webui/: __init__.py  app.py
src/msg2eml/webui/static/: app.js  style.css
src/msg2eml/webui/templates/: index.html
tests/: helpers.py
tests/integration/: test_real_fixtures.py  test_roundtrip.py
tests/unit/: test_attachments.py  test_calendar_convert.py  test_cli.py  test_contact_convert.py  test_convert.py  test_convert_bytes.py  test_headers.py  test_msgclass.py  test_report.py  test_rtf.py  test_task_convert.py  test_walker.py  test_webui.py
