[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "msg2eml"
version = "0.1.0"
description = "Convert Microsoft Outlook .msg files into standard .eml (RFC 5322/MIME) files"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [{ name = "ideotion" }]
keywords = ["msg", "eml", "outlook", "email", "converter", "mime", "rfc5322"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Utilities",
]
dependencies = [
    "extract-msg>=0.54,<0.56",
    "RTFDE>=0.1.0,<0.2",
    "compressed-rtf>=1.0.6,<2",
]

[project.urls]
Homepage = "https://github.com/ideotion/msg-to-eml-open-converter"
Issues = "https://github.com/ideotion/msg-to-eml-open-converter/issues"

[project.scripts]
msg2eml = "msg2eml.cli:main"
msg2eml-ui = "msg2eml.webui:main"

[project.optional-dependencies]
ui = [
    "flask>=3.0,<4",
]
dev = [
    "msg2eml[ui]",
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/msg2eml"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line length is enforced by the formatter instead
]

[tool.ruff.lint.isort]
known-first-party = ["msg2eml"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
files = ["src", "tests"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["extract_msg", "extract_msg.*", "RTFDE", "RTFDE.*", "compressed_rtf", "compressed_rtf.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
